--- a/src/ui/popup.html
+++ b/src/ui/popup.html
@@ -8,6 +8,11 @@
 <body>
 	<div class="popup-wrapper">
 		<h1>Swagger Token</h1>
+		<div style="display:flex; align-items:center; gap:6px; margin-bottom:6px;">
+			<div id="versionInfo" class="version-info small"></div>
+			<button id="checkUpdateBtn" class="button secondary" style="padding:4px 10px; font-size:12px; line-height:1;">↻</button>
+		</div>
+		<div id="updateInfo" class="update-info small" style="min-height:16px; margin-bottom:6px;"></div>
 		<div id="services" class="services"></div>
 		<div id="status" class="status-bar"></div>
 		<div class="actions">
