--- a/src/ui/options.html
+++ b/src/ui/options.html
@@ -10,22 +10,29 @@
 		<h1>Auto Swagger Token</h1>
 		<div class="card">
 			<h2>Авторизация</h2>
-			<label>Auth Endpoint URL
-				<input id="authEndpoint" type="text" placeholder="https://auth.example.com/token" />
-			</label>
-			<label>Basic Header
-				<input id="basicHeader" type="text" placeholder="Basic xxxx==" />
-			</label>
-			<label>Интервал (мин)
-				<input id="intervalMinutes" type="number" min="1" />
-			</label>
+			<label for="authEndpoint">Auth Endpoint URL</label>
+			<input id="authEndpoint" type="text" placeholder="https://auth.example.com/token" />
+			<label for="basicHeader">Basic Header</label>
+			<input id="basicHeader" type="text" placeholder="Basic xxxx==" />
+			<label for="intervalMinutes">Интервал (мин)</label>
+			<input id="intervalMinutes" type="number" min="1" />
 			<div id="status" class="status"></div>
-			<button id="saveBtn" class="button">Сохранить</button>
+			<div style="margin-top:8px; display:flex; justify-content:flex-end;">
+				<button id="saveBtn" class="button">Сохранить</button>
+			</div>
 		</div>
 		<div class="card">
 			<h2>Микросервисы</h2>
 			<div id="microservices" class="microservices"></div>
-			<button id="addService" class="button secondary">Добавить сервис</button>
+			<div style="display:flex; gap:8px; justify-content:flex-end; margin-top:8px;">
+				<button id="addService" class="button secondary">Добавить сервис</button>
+				<button id="saveServicesBtn" class="button">Сохранить сервисы</button>
+			</div>
+		</div>
+		<div class="card" style="display:flex; justify-content:flex-end; gap:8px; align-items:center;">
+			<button id="exportConfigBtn" class="button flat small-button">Скачать конфиг</button>
+			<button id="importConfigBtn" class="button flat small-button">Загрузить конфиг</button>
+			<input id="importConfigFile" type="file" accept="application/json" style="display:none" />
 		</div>
 	</div>
 	<script src="options.js"></script>
